--- a/src/style/_account.scss
+++ b/src/style/_account.scss
@@ -8,4 +8,35 @@
     margin: 20px auto;
     padding: 40px;
   }
+  .user-info {
+    img {
+      display: block;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      margin: 30px auto;
+    }
+    ul {
+      display: flex;
+      justify-content: center;
+      text-align: center;
+      width: 100%;
+      li {
+        flex-grow: 1;
+        border-left: 1px solid rgba(0,0,0,0.1);
+        &:first-child {
+          border-left: none;
+        }
+        span {
+          display: block;
+          font-size: 14px;
+        }
+        b {
+          display: block;
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
 }
