Repolist(to be fixed)

--- a/src/style/_account.scss
+++ b/src/style/_account.scss
@@ -39,4 +39,27 @@
       }
     }
   }
+  .user-repos {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    border-top: 1px solid rgba(0,0,0,0.1);
+    li {
+      border-bottom: 1px solid rgba(0,0,0,0.1);
+      div {
+        display: flex;
+        justify-content: space-between;
+      }
+      .name {
+        font-size: 16px;
+        font-weight: 500;
+        color: #00bcd4;
+      }
+      .desc {
+        font-size: 15px;
+      }
+      .lang {
+        font-size: 14px;
+      }
+    }
+  }
 }
